<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EnergyQuiz</string>


    <string name="Adminpasswort">Administrator-Passwort</string>

    <string name="userIsLoggedIn">Nutzer ist angemeldet.</string>
    <string name="userIsLoggedOut">Nutzer ist abgemeldet.</string>
    <string name="logOutSuccessfull">Abmeldung erfolgreich.</string>
    <string name="logInSuccessfull">Anmeldung erfolgreich.</string>
    <string name="logInFailed">Anmeldung fehlgeschlagen.</string>
    <string name="signUpSuccessfull">Registierung erfolgreich.</string>
    <string name="signUpFailed">Registrierung fehlgeschlagen.</string>
    <string name="deleteAccountSuccessfull">Löschung des Accounts erfolreich.</string>
    <string name="deleteAccountFailed">Löschung des Accounts fehlgeschlagen.</string>
    <string name="resetEmailSuccessfull">Email zum Zurücksetzen gesendet.</string>
    <string name="resetEmailFailed">Email zum Zurücksetzen fehlgeschlagen.</string>
    <string name="passwordChangeSuccessfull">Passwortänderung erfolgreich.</string>
    <string name="passwordChangeFailed">Passwortänderung fehlgeschlagen.</string>
    <string name="userNameEmpty">Nutzername leer</string>
    <string name="emailEmpty">Email leer.</string>
    <string name="emailNotValid">Email ungültig.</string>
    <string name="passwordEmpty">Passwort leer.</string>
    <string name="confirmationPasswordEmpty">Wiederholung Passwort leer.</string>
    <string name="passwordsNotEqual">Passwörter ungleich.</string>
    <string name="userNotLoggedIn">Nutzer nicht angemeldet.</string>

    <string name="login">Anmeldung</string>
    <string name="login_email">Email</string>
    <string name="login_password">Passwort</string>
    <string name="remainLoggedIn">Angemeldet bleiben</string>
    <string name="login_button">Anmelden</string>
    <string name="forgotPasswordRedirectText">Passwort vergessen</string>
    <string name="signUpRedirectText">Noch nicht registriert?\nHier registrieren!</string>

    <string name="signUp">Registrierung</string>
    <string name="signup_userName">Nutzername</string>
    <string name="signup_email" tools:ignore="UnusedResources">Email</string>
    <string name="signup_password" tools:ignore="UnusedResources">Passwort</string>
    <string name="signup_confirmpassword" tools:ignore="UnusedResources">Wiederhole Passwort</string>
    <string name="signup_button">Registrieren</string>
    <string name="loginRedirectSignUpText">Bereits registriert?\nHier anmelden!</string>

    <string name="forgotPassword">Passwort vergessen</string>
    <string name="sendNewPassword_email" tools:ignore="UnusedResources">Email</string>
    <string name="sendNewPassword_button">Neues Passwort anfordern</string>
    <string name="loginRedirectForgotPasswordText" tools:ignore="UnusedResources">Doch nicht vergessen?\nHier anmelden!</string>

    <string name="changePassword">Passwort ändern</string>
    <string name="newPassword_text" tools:ignore="UnusedResources">Passwort</string>
    <string name="confirmNewPassword_text">Passwort wiederholen</string>
    <string name="changePassword_button">Passwort ändern</string>
    <string name="loginRedirectChangePasswordText" tools:ignore="UnusedResources">Keine Änderung benötigt?\nGehe zurück!</string>

    <string name="deleteAccount">Account löschen?</string>
    <string name="confirmDeleteAcc_button">Account löschen</string>
    <string name="reminderDeleteAccount">ALLE Einstellungen &amp; Daten unwiderruflich löschen!</string>

    <string name="cancelDeleteAcc_textview" tools:ignore="UnusedResources">Doch nicht löschen?\nGehe zurück!</string>

    <string name="main" tools:ignore="UnusedResources">Quiz zu Energie!</string>
    <string name="startSingleplayer_button" tools:ignore="UnusedResources">Einzelspieler</string>
    <string name="deleteAcc_button" tools:ignore="UnusedResources">Account löschen</string>
    <string name="logout_button" tools:ignore="UnusedResources">Abmelden</string>
    <string name="changePasswordMain_button" tools:ignore="UnusedResources">Passwort ändern</string>

    <string name="singlePlayerStart" tools:ignore="UnusedResources">Einzelspieler Start</string>
    <string name="startSinglePlayerGame_button" tools:ignore="UnusedResources">Starte Spiel</string>

    <string name="singlePlayerGame" tools:ignore="UnusedResources">Einzelspieler</string>
    <string name="numberQuestionsProgress_textview">0/0</string>
    <string name="question_textview">Leere Frage</string>
    <string name="answer1_textview">Leere Antwort 1</string>
    <string name="answer2_textview">Leere Antwort 2</string>
    <string name="answer3_textview">Leere Antwort 3</string>
    <string name="answer4_textview">Leere Antwort 4</string>
    <string name="confirm_next_button">Leer Bestätige/Weiter</string>
    <string name="confirm_button">Bestätige</string>
    <string name="next_button">Weiter</string>

    <string name="singlePlayerResult" tools:ignore="UnusedResources">Einzelspieler Ergebnisse</string>
    <string name="results_textview" tools:ignore="UnusedResources">Ergebnis</string>
    <string name="numberCorrectAnswers_textview" tools:ignore="UnusedResources">Richtig beantwortet</string>
    <string name="roundScore_textview" tools:ignore="UnusedResources">Punkte Runde</string>
    <string name="userScore_textview" tools:ignore="UnusedResources">Gesamtpunkte</string>
    <string name="userRank_textview" tools:ignore="UnusedResources">Rang</string>
    <string name="userRank_0">Anfänger</string>
    <string name="userRank_1">Schüler</string>
    <string name="userRank_2">Fortgeschrittener</string>
    <string name="userRank_3">Profi</string>
    <string name="userRank_4">Meister</string>
    <string name="userRank_5">Erleuchteter</string>
    <string name="repeatNewGame_button" tools:ignore="UnusedResources">Nochmal spielen</string>
    <string name="home_button" tools:ignore="UnusedResources">Home</string>

    <string name="questionTitleTextView" tools:ignore="UnusedResources">Fragenkatalog</string>
    <string name="buttonToNewQuestion" tools:ignore="UnusedResources">+</string>
    <string name="editTextNewQuestion">Frage</string>
    <string name="editTextNewAnswer1">Antwort Nr.1</string>
    <string name="editTextNewAnswer2">Antwort Nr.2</string>
    <string name="editTextNewAnswer3">Antwort Nr.3</string>
    <string name="editTextNewAnswer4">Antwort Nr.4</string>
    <string name="radioButtonNewCorrectAnswerOption1">Richtige Antwort</string>
    <string name="radioButtonNewCorrectAnswerOption2">Richtige Antwort</string>
    <string name="radioButtonNewCorrectAnswerOption3">Richtige Antwort</string>
    <string name="radioButtonNewCorrectAnswerOption4">Richtige Antwort</string>
    <string name="buttonBackToCatalog">Zurück</string>
    <string name="buttonSubmitNewQuestion">Speichern</string>
    <string name="textViewTitleDialog" tools:ignore="UnusedResources">Aktion auswählen</string>
    <string name="textViewDialogText" tools:ignore="UnusedResources">Möchtest du diese Frage bearbeiten oder löschen?</string>
    <string name="buttonDialogEdit">Bearbeiten</string>
    <string name="buttonDialogDelete">Löschen</string>
    <string name="buttonDialogCancel">Abbrechen</string>
    <string name="buttonDialogCancelandDiscard" tools:ignore="UnusedResources">Abbrechen &amp; Fortschritt verwerfen</string>
    <string name="buttonBackToMenu" tools:ignore="UnusedResources">Menü</string>

    <string name="multiPlayerLobbyscreenHeader" tools:ignore="UnusedResources">Mehrspieler</string>
    <string name="buttonBackToHome" tools:ignore="UnusedResources">Zurück</string>
    <string name="buttonCreateLobby" tools:ignore="UnusedResources">Spiel erstellen</string>
    <string name="buttonJoinLobby">Beitreten</string>

    <string name="buttonDialogYes" tools:ignore="UnusedResources">Ja</string>
    <string name="buttonDialogNo" tools:ignore="UnusedResources">Nein</string>
    <string name="textViewLobbyScreenTitleDialog" tools:ignore="UnusedResources">Möchtest du dem Raum beitreten?</string>

    <string name="singlePlayerGameStartTextViewFragen">Fragen</string>
    <string name="singlePlayerGameStartTextViewDefaultNr">5</string>

    <string name="multiPlayerGameStartTextViewFragen">Fragen</string>
    <string name="multiPlayerGameStartTextViewDefaultNr">5</string>

    <string name="homeScreenTextViewCard1">Einzelspieler</string>
    <string name="homeScreenTextViewCard2">Mehrspieler</string>
    <string name="homeScreenTextViewCard3">Spielstatistik</string>
    <string name="homeScreenTextViewCard4">Fragenkatalog</string>

    <string name="UserLoginTextViewHeader" tools:ignore="UnusedResources">Einloggen</string>
    <string name="UserSettingsTextViewHeader">Nutzerkonto</string>
    <string name="statisticsTextViewHeader">Spielstatistik</string>
    <string name="singlePlayerTextViewHeader">Einzelspieler</string>
    <string name="singlePlayerResultsTextViewHeader">Ergebnis</string>
    <string name="multiPlayerTextViewHeader">Mehrspieler</string>
    <string name="questionCatalogTextViewHeader">Fragenkatalog</string>
    <string name="PopUpEditDeleteTextViewHeader">Aktion auswählen</string>

    <string name="singlePlayerResultsUser1TextViewQuote">Richtig beantwortet:</string>
    <string name="singlePlayerResultsUser1TextViewPointsEarned">Verdiente Punkte:</string>
    <string name="singlePlayerResultsUser1TextViewAllPoints">Gesamtpunktzahl: </string>
    <string name="singlePlayerResultsUser1TextViewRank">Aktueller Rang: </string>
    <string name="singlePlayerResultsUser1TextViewPlayAgain">Nochmal!</string>
    <string name="singlePlayerResultsUser1TextViewGoHome">Beenden</string>

    <string name="multiPlayerLobbyTextViewSubHeader">Verfügbare Spiele</string>
    <string name="multiPlayerLobbyTextViewSubSubHeader1">[Host]</string>
    <string name="multiPlayerLobbyTextViewSubSubHeader2">[Anzahl Fragen]</string>
    <string name="multiPlayerLobbyCardViewCreateGameButton">Eigenes Spiel erstellen!</string>
    <string name="multiPlayerLobbyTextViewDialogCancelButton" tools:ignore="UnusedResources">Abbrechen und Raum auflösen</string>
    <string name="multiPlayerLobbyTextViewDialogWaitingHeader">Warten auf Mitspieler...</string>
    <string name="multiPlayerLobbyTextViewDialogJoinHeader">Spiel beitreten?</string>
    <string name="multiPlayerLobbyTextViewDialogJoinYes">Ja</string>
    <string name="multiPlayerLobbyTextViewDialogJoinNo">Nein</string>
    <string name="multiPlayerResultsTextViewDialogWaitingHeader">Warten auf Mitspieler</string>


    <string name="settingsTextViewUsername">Benutzername:</string>
    <string name="settingsTextViewUserMail">E-Mail:</string>

    <string name="settingsTextViewPassword">Passwort ändern</string>
    <string name="settingsTextViewLogout">Ausloggen</string>
    <string name="settingsTextViewDeleteUser">Account löschen</string>

    <string name="NA">N/A</string>
    <string name="IDNF">ID nicht gefunden</string>
    <string name="Bitte_Anmelden">Bitte Anmelden</string>
    <string name="Punkte" tools:ignore="UnusedResources"> pkt.</string>
    <string name="Prozentzeichen" tools:ignore="UnusedResources"> %.1f%%</string>

    <string name="Frage" tools:ignore="UnusedResources">Frage:</string>
    <string name="Antwort1">1.</string>
    <string name="Antwort2">2.</string>
    <string name="Antwort3">3.</string>
    <string name="Antwort4">4.</string>

    <string name="StatRank">Rang:</string>
    <string name="StatPoints">Punktezahl:</string>
    <string name="StatNextPoints">Nächster Rang bei:</string>
    <string name="StatRight">Richtig beantwortet:</string>
    <string name="StatOverall">Gesamt beantwortet:</string>
    <string name="StatQuote">Quote:</string>

    <string name="singlePlayerResultsUser2TextViewQuote">Richtige Gegner:</string>

    <string name="NewQuest">Neue Frage</string>
    <string name="EditQuest">Frage bearbeiten</string>








</resources>