<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SinglePlayer.SinglePlayerGameActivity">

    <TextView
        android:id="@+id/question_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/numberQuestionsProgress_textview"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/answer3_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/answer3_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/answer2_textview"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/answer4_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/answer4_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/answer3_textview"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/answer2_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/answer2_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/answer1_textview"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/confirm_next_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/slateblue"
        android:text="@string/confirm_next_button"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/answer4_textview"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/numberQuestionsProgress_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numberQuestionsProgress_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/answer1_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/answer1_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_textview" />


</androidx.constraintlayout.widget.ConstraintLayout>