<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SinglePlayerResultActivity">

    <TextView
        android:id="@+id/results_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/numberCorrectAnswers_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="numberCorrectAnswers_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_textview" />

    <TextView
        android:id="@+id/roundScore_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roundScore_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/numberCorrectAnswers_textview"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/userScore_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userScore_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/roundScore_textview"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/userRank_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userRank_textview"
        android:textAlignment="center"
        android:textColor="@color/slateblue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/userScore_textview"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/repeatNewGame_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/slateblue"
        android:text="@string/repeatNewGame_button"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/userRank_textview"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/slateblue"
        android:text="@string/home_button"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/repeatNewGame_button"
        tools:layout_editor_absoluteX="-16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>