<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:textColor="@color/slateblue"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startSingleplayer_button"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/slateblue"
        android:text="@string/startSingleplayer_button"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/deleteAcc_button"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/slateblue"
        android:text="@string/deleteAcc_button"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="252dp"
        android:backgroundTint="@color/slateblue"
        android:text="@string/logout_button"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/changePasswordMain_button"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="164dp"
        android:backgroundTint="@color/slateblue"
        android:text="@string/changePasswordMain_button"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>