<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewLobbyScreenTitleDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/textViewLobbyScreenTitleDialog"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/buttonDialogYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="16dp"
            android:text="@string/buttonDialogYes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLobbyScreenTitleDialog" />

        <Button
            android:id="@+id/buttonDialogNo"
            android:layout_width="124dp"
            android:layout_height="48dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/buttonDialogNo"
            app:layout_constraintStart_toEndOf="@+id/buttonDialogYes"
            app:layout_constraintTop_toBottomOf="@+id/textViewLobbyScreenTitleDialog" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>